Create basic functionality

--- a/undoable-counter/index.html
+++ b/undoable-counter/index.html
@@ -15,13 +15,13 @@
         <button class="button" id="redo">Redo</button>
       </div>
       <div class="app__numbers">
-        <button class="button" id="minus-100">-100</button>
-        <button class="button" id="minus-10">-10</button>
-        <button class="button" id="minus-1">-1</button>
+        <button class="button button--modifier" data-value="-100">-100</button>
+        <button class="button button--modifier" data-value="-10">-10</button>
+        <button class="button button--modifier" data-value="-1">-1</button>
         <span class="app__number" id="number">0</span>
-        <button class="button" id="plus-1">+1</button>
-        <button class="button" id="plus-10">+10</button>
-        <button class="button" id="plus-100">+100</button>
+        <button class="button button--modifier" data-value="1">+1</button>
+        <button class="button button--modifier" data-value="10">+10</button>
+        <button class="button button--modifier" data-value="100">+100</button>
       </div>
       <div class="app__history">
         <h2>History</h2>
